--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -556,6 +556,8 @@ ul {
 }
 
 .spring-title-wrapper {
+    border: 3px solid #C9B079;
+    border-radius: 10px;
     display: inline-flex;
     align-items: center;
     background-color: #fff;
@@ -927,6 +929,7 @@ ul {
     border-radius: 30px;
     font-weight: 500;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    border: 3px solid #C9B079;
 }
 
 .btn-explore:hover {
@@ -1006,6 +1009,7 @@ ul {
     text-align: center;
     box-shadow: var(--ts-box-shadow);
     border: 1px solid #e0e0e0;
+    border: 3px solid #C9B079;
     transition: transform 0.3s ease;
 }
 
@@ -1035,6 +1039,7 @@ ul {
 .ts-pagination-dots {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 8px;
     margin-top: 30px;
 }
@@ -1071,7 +1076,7 @@ ul {
     padding: 10px 30px;
     border-radius: 30px;
     box-shadow: var(--ts-box-shadow);
-    border: 1px solid #e0e0e0;
+    border: 3px solid #C9B079;
 }
 
 .ts-popular-icon {
@@ -1236,6 +1241,7 @@ ul {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
     display: flex;
     position: relative;
+    border: 3px solid #C9B079;
 }
 
 .gift-card {
@@ -1386,7 +1392,7 @@ ul {
     padding: 8px 30px;
     border-radius: 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-    border: 1px solid #e0e0e0;
+    border: 3px solid #C9B079;
 }
 
 .testimonials-heart-icon {
@@ -1414,6 +1420,7 @@ ul {
     display: flex;
     flex-direction: column;
     height: 100%;
+    border: 3px solid #C9B079;
 }
 
 .testimonial-text {
