--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -815,33 +815,6 @@ ul {
     margin-bottom: 40px;
 }
 
-.product-card {
-    background-color: #fff;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.product-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-}
-
-.product-image {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-}
-
-.product-image img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-}
-
 .spring-icon {
     width: 80px;
     height: 40px;
@@ -862,10 +835,10 @@ ul {
 }
 
 .product-card {
-    background-color: #fff;
-    border-radius: 20px;
+    background-color: white;
+    border-radius: 30px;
     overflow: hidden;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -875,16 +848,17 @@ ul {
 }
 
 .product-image {
-    padding: 20px;
+    position: relative;
+    padding: 3px;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
 }
 
 .product-image img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: contain;
     transition: transform 0.3s ease;
 }
